fix css paragraph

--- a/src/_import.scss
+++ b/src/_import.scss
@@ -5,6 +5,8 @@ $main-text-color: #000;
 $secondary-text-color: #410B13;
 $fairy-color: #FECEE9;
 
+$main-line-height: 1.5rem;
+
 $category-un-color: #5D2B7D; // Catégorie unknown : pas encore trouvé
 $category-fun-color: #A72D89; // Catégorie Fun : a trouvé
 $category-sport-color: #1474BB; // Catégorie Sport : a trouvé
