--- a/src/app/components/articles/article/title/title.component.html
+++ b/src/app/components/articles/article/title/title.component.html
@@ -1,11 +1,7 @@
 <section class="title">
   <div class="article">
-    <h1>{{ article.title }}</h1>
+    <h1 [ngClass]="article.category.slug + '-color'">{{ article.title }}</h1>
     <div class="title-categories">
-      <ul>
-        <li [ngClass]="article.category.name" [ngClass]="article.category.slug + '-color'">{{ article.category.name }}
-        </li>
-      </ul>
       <p>{{ article.leads }}</p>
     </div>
     <div>
