--- a/src/app/components/paragraph/paragraph.component.scss
+++ b/src/app/components/paragraph/paragraph.component.scss
@@ -2,24 +2,27 @@
 
 .introduction {
     margin-bottom: $main-border;
+    line-height: $main-line-height;
 
     p {
-
         font-style: italic;
+        color: $secondary-text-color;
     }
 }
 
 .conclusion {
     p {
-        font-weight: normal;
+        line-height: $main-line-height;
+        color: $secondary-text-color;
     }
+}
+
+h4 {
+    font-size: $main-border;
 }
 
 h4+p {
     margin-top: $small-border;
     margin-bottom: $main-border;
-}
-
-p {
-    line-height: 115%;
+    line-height: $main-line-height;
 }
