--- a/src/app/components/articles/article-type-small/article-type-small.component.html
+++ b/src/app/components/articles/article-type-small/article-type-small.component.html
@@ -1,9 +1,13 @@
-<article class="main-type3 radius-{{pos}}" [routerLink]="APP_ROUTES.articles+'/'+article.slug" [queryParams]="{id: article.id}" [ngStyle]="{ 'background-image': 'url(' + article.publicationImage + ')' }">
-    <div [ngClass]="'description '+ article.category.slug+'-background '+ 'radius-bottom-'+pos">
-      <div class="titles">
-        <h4 [ngClass]="article.category.slug+'-color'"><span>{{article.category.name}}</span></h4>
-        <h3>{{article.title}}</h3>
-        <time>{{article.publicationDate | date : 'dd/M/yy' }}</time>
-      </div>
+<article class="main-type3 radius-{{pos}}" [routerLink]="APP_ROUTES.articles+'/'+article.slug"
+  [queryParams]="{id: article.id}" [ngStyle]="{ 'background-image': 'url(' + article.publicationImage + ')' }">
+  <div
+    [ngClass]="'description '+article.category.slug+'-back-opacity '+ article.category.slug+'-background '+ 'radius-bottom-'+pos">
+    <div class="titles">
+      <h4 [ngClass]="article.category.slug+'-color'" class=" ">
+        <span>{{article.category.name}}</span>
+      </h4>
+      <h3>{{article.title}}</h3>
+      <time>{{article.publicationDate | date : 'dd/M/yy' }}</time>
     </div>
-  </article>
+  </div>
+</article>
