--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,6 +24,12 @@
       visibility: visible;
       height: 90px;
 
+      .divnav {
+        .categ {
+          display: none;
+        }
+      }
+
       ul {
 
         li:nth-of-type(1),
