--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -8,8 +8,9 @@
   flex-direction: column;
   align-items: flex-start;
 
+
   h1 {
-    font-size: 24px;
+    font-size: 28px;
     margin-bottom: $small-border;
   }
 
@@ -18,6 +19,12 @@
     margin-bottom: $small-border;
     line-height: $main-line-height;
     font-size: 16px;
+
+    ::first-letter {
+      font-family: "Glam-queen";
+      font-size: 32px;
+      font-weight: bold;
+    }
   }
 
   .published {
