--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,13 @@
 .top-bar {
   display: grid;
   grid-template-columns: 2fr 1fr;
+
   .stock {
     display: flex;
     gap: $main-border;
     margin: $main-border 0;
   }
+
   .search {
     margin: $main-border 0;
   }
@@ -19,32 +21,33 @@
 }
 
 @media screen and (min-width: $min-width-desktop) {
-    #page-content {
-      width: 70%;
-      margin-top:16.1% !important;
-      max-width: 71em;
-      padding-left: $big-border;
-      padding-right: $big-border;
-      background-color: $main-background-color;
-      box-shadow: 0.75rem 0 0 $secondary-background-color, -0.75rem 0 0 $secondary-background-color;
-      overflow: initial;
-      margin: 0 auto;
-    }
-
-    .stock {
-      justify-content: flex-start;
-    }
-  
-    #page-wrap {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-image: url('../assets/images/barbieAd.jpg');
-
-      background-size: contain; 
-
-      background-repeat: no-repeat; 
-
-      background-color: #f31fa8;
-    }
+  #page-content {
+    width: 70%;
+    margin-top: 292px !important;
+    max-width: 71em;
+    padding-left: $big-border;
+    padding-right: $big-border;
+    background-color: $main-background-color;
+    box-shadow: 0.75rem 0 0 $secondary-background-color, -0.75rem 0 0 $secondary-background-color;
+    overflow: initial;
+    margin: 0 auto;
   }
+
+  .stock {
+    justify-content: flex-start;
+  }
+
+  #page-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('../assets/images/barbieAd.jpg');
+
+    background-size: 1800px 850px;
+    background-position: top center;
+
+    background-repeat: no-repeat;
+
+    background-color: #f31fa8;
+  }
+}
