--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -138,12 +138,14 @@
   }
 
   #accueil {
+    margin-top: 1rem;
     background-image: image-set("/assets/images/home.png");
     background-repeat: no-repeat;
     color: transparent;
   }
 
   #login {
+    margin-top: 1rem;
     background-image: image-set("/assets/images/user.png");
     background-repeat: no-repeat;
     color: transparent;
