--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,6 +3,9 @@
 
 @media screen and (min-width: $min-width-desktop) {
   #head {
+    position: fixed;
+    background-color: $main-background-color;
+    z-index: 3;
     width: 100%;
     height: 90px;
     border-image-slice: fill;
