article comment scroll bar

--- a/src/app/components/articles/article/comment/comment.component.scss
+++ b/src/app/components/articles/article/comment/comment.component.scss
@@ -6,14 +6,19 @@
   h2 {
     padding: $small-border;
     margin-bottom: $small-border;
-    color : white;
+    color: white;
   }
-  
+
+  .article-comment-scroll {
+    max-height: 324px;
+    overflow-y: auto;
+  }
+
   .comment-form {
     padding: 10px;
     border-radius: 5px;
     margin-top: 20px;
-    
+
     .textArea {
       width: 100%;
       border: none;
@@ -39,24 +44,4 @@
 .connect-link {
   text-decoration: underline;
   cursor: pointer;
-}
-
-.fun-button {
-  background-color: $category-fun-color;
-}
-
-.sport-button {
-  background-color: $category-sport-color;
-}
-
-.miam-button {
-  background-color: $category-food-color;
-}
-
-.carie-button {
-  background-color: $category-health-color;
-}
-
-.ca-coute-bonbon-button {
-  background-color: $category-economy-color;
 }
