--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -137,17 +137,15 @@
     }
   }
 
+
   #accueil {
-    margin-top: 1rem;
-    background-image: image-set("/assets/images/home.png");
+    display: none;
     background-repeat: no-repeat;
-    color: transparent;
   }
 
   #login {
-    margin-top: 1rem;
-    background-image: image-set("/assets/images/user.png");
+    display: none;
     background-repeat: no-repeat;
-    color: transparent;
   }
+
 }
