Adding fils d'arianne component and harmonising margin in article

--- a/src/app/components/articles/article/comment/comment.component.scss
+++ b/src/app/components/articles/article/comment/comment.component.scss
@@ -1,7 +1,7 @@
 @use "/src/_import.scss" as *;
 
 .section {
-  margin: $big-border;
+  margin: $big-border 0;
 
   h2 {
     padding: $small-border;
