--- a/src/app/components/articles/article/other/other.component.scss
+++ b/src/app/components/articles/article/other/other.component.scss
@@ -1,9 +1,7 @@
 @use "/src/_import.scss" as *;
 
 .other {
-    margin-right: $big-border;
-    margin-left: $big-border;
-    margin-top: $big-border; 
+    margin: $big-border 0;
     
     .miam {
       background-color: $category-food-color;
