--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -1,23 +1,16 @@
 @use "/src/_import.scss" as *;
 
+#main-content {
+  margin: $big-border;
+  text-align: justify;
+}
+
 @media screen and (min-width: $min-width-desktop) {
   #main-content {
-    .title {
-      width: 100%;
-      max-width: 1036px;
-      margin: 0 auto;
-      text-align: justify;
-    }
-
-    .body {
-      width: 100%;
-      margin: 0 auto;
-      text-align: justify;
-    }
-
     .article-bottom {
       display: grid;
       grid-template-columns: 2fr 1fr;
+      gap:$main-border;
     }
   }
 }
