--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -144,7 +144,13 @@
 
   #accueil {
     display: none;
+    font-size: 2.5rem;
     background-repeat: no-repeat;
+  }
+
+  i {
+    font-size: 2.5rem;
+
   }
 
   #login {
