--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -4,6 +4,6 @@
     <app-article-body [article]="article" class="body"></app-article-body>
     <div class="article-bottom">
         <app-article-comment [article]="article" class="comment"></app-article-comment>
-        <app-article-other [categorySlug]="article.category.slug" class="other"></app-article-other>
+        <app-article-other [categorySlug]="article.category.slug" [id]="article.id" class="other"></app-article-other>
     </div>
 </article>
