fix form in information component

--- a/src/app/components/user/information/information.component.html
+++ b/src/app/components/user/information/information.component.html
@@ -1,9 +1,9 @@
 <h2>Informations Personnelles</h2>
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-    <div class="example-container form-field-container">
-        <mat-form-field appearance="fill" >
+    <div class="form-field-container">
+        <mat-form-field appearance="fill">
             <mat-label>Entrer votre nom</mat-label>
-            <input matInput [placeholder]="(user | async)?.lastName ?? ''" formControlName="lastName">
+            <input matInput [placeholder]="(user | async)?.lastName ?? ''" formControlName="lastName" >
         </mat-form-field>
 
         <mat-form-field appearance="fill">
@@ -11,28 +11,28 @@
             <input matInput [placeholder]="(user | async)?.firstName ?? ''" formControlName="firstName" >
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="element">
             <mat-label>Entrez votre adresse mail</mat-label>
             <input matInput [placeholder]="(user | async)?.email ?? ''" formControlName="email">
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="element">
             <mat-label>Entrez votre ancien mot de passe</mat-label>
             <input matInput type="password" placeholder="Mot de passe">
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="element">
             <mat-label>Entrez votre nouveau mot de passe</mat-label>
             <input matInput type="password" placeholder="Nouveau mot de passe" formControlName="password">
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="element">
             <mat-label>Confirmez votre nouveau mot de passe</mat-label>
             <input matInput type="password" placeholder="Confirmer mot de passe">
         </mat-form-field>
     </div>
     <div class="buttons">
+        <button type="submit" (click)="handleDelete()"  class="delete-btn">Supprimer le compte</button>
         <button type="submit" class="update-btn">Mettre à jour le compte</button>
-        <button type="submit" class="delete-btn" (click)="handleDelete()">Supprimer le compte</button>
     </div>
 </form>
