update scss header

--- a/src/app/components/category-block/category-block.component.html
+++ b/src/app/components/category-block/category-block.component.html
@@ -3,7 +3,7 @@
     [queryParams]="{id: category.id, name:category.name, slug:category.slug}">
     <h2 [ngClass]="category.slug + '-color'">{{category.name}}</h2>
     <p>
-      <span>Voir plus</span>
+      <span class="voir">Voir plus</span>
       <span>></span>
     </p>
   </a>
