--- a/src/app/components/category-block/category-block.component.scss
+++ b/src/app/components/category-block/category-block.component.scss
@@ -34,6 +34,10 @@
   .categories-3articles {
     display: none;
   }
+
+  .voir {
+    margin-right: 3.5rem;
+  }
 }
 
 @media screen and (min-width: $min-width-desktop) and (orientation: landscape) {
