scss update header fahome

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <nav>
       <ul class="divnav">
         <li id="accueil" [routerLink]="APP_ROUTES.index">
-          <i class="fa fa-home" aria-hidden="true"></i>
+          <i id="fahome" class="fa fa-home" aria-hidden="true"></i>
           Accueil
         </li>
         <li class="categ" id="categ2" [routerLink]="APP_ROUTES.categories">
