--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,10 +22,6 @@
       height: 80px;
     }
 
-    #accueil+i {
-      display: none;
-    }
-
     #categ2+i {
       display: none;
     }
@@ -40,6 +36,8 @@
           display: none;
         }
       }
+
+
 
       ul {
 
@@ -76,6 +74,11 @@
       visibility: hidden;
     }
   }
+
+  #fahome {
+    display: none;
+  }
+
 }
 
 @media screen and (max-width: $min-width-desktop) {
