--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@use "/src/materials.scss" as *;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -70,6 +71,4 @@ a:visited {
   max-width: 90%;
   width: 27.5rem;
   height: 70%;
-
-
 }
