--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -28,11 +28,36 @@
     margin-top: $small-border;
 
     .example-tab-icon {
-      width: 20px;
-      height: 20px;
+      width: 40px;
+      height: 40px;
       background-color: $secondary-text-color;
     }
   }
+}
+
+.logo-list {
+  display: flex;
+  align-items: center;
+}
+
+.logo-option {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 10px; 
+}
+
+.logo-option input[type="radio"] {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.logo-option::before {
+
+}
+
+.logo-option.selected div {
+    background-color: blue !important;
 }
 
 @media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {
