--- a/src/_import.scss
+++ b/src/_import.scss
@@ -32,6 +32,16 @@ $min-width-desktop: 800px;
   background-color: $fairy-color;
 }
 
+@mixin buttons {
+  color: $secondary-text-color;
+  background-color: white;
+  padding: $main-border;
+  border: solid 1px $secondary-text-color;
+  cursor: pointer;
+  height: 50px;
+  width: max-content;
+}
+
 
 @media only screen and (min-width: $min-width-desktop) {
   ::ng-deep .mat-mdc-tab-list .mat-mdc-tab-labels .mdc-tab:hover {
