delete buttons and user modif

--- a/src/app/components/user/information/information.component.html
+++ b/src/app/components/user/information/information.component.html
@@ -1,4 +1,4 @@
-<section class="private-infos">
+<section class="private-infos delete-box">
   <h2>Informations Personnelles</h2>
   <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div class="form-field-container">
