--- a/src/app/components/user/information/information.component.scss
+++ b/src/app/components/user/information/information.component.scss
@@ -22,30 +22,19 @@
     font-size: 3rem;
     color: $fairy-color;
     text-align: center;
-    margin-bottom: $main-border;
+    margin: $main-border 0;
   }
 
   .buttons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .update-btn {
-    color: $secondary-text-color;
-    background-color: $fairy-color;
-    padding: $main-border;
-    border: none;
-    border-radius: $big-border;
-    cursor: pointer;
-    height: 50px;
-    width: max-content;
+    @include buttons;
     margin: 0 auto;
     grid-column: 2/3;
-  }
-
-  .update-btn:hover {
-    background-color: darken($fairy-color, 10%);
-    color: $main-text-color;
   }
 
   .delete-btn {
@@ -54,6 +43,6 @@
     background-color: $main-background-color;
     color: $category-economy-color;
     cursor: pointer;
-    font-size: 10px;
+    font-size: 12px;
   }
 }
