--- a/src/materials.scss
+++ b/src/materials.scss
@@ -24,25 +24,42 @@
   flex: none;
 }
 
-#sugar-meter .mat-expansion-indicator {}
-
-.private-infos .mat-expansion-panel {
+.delete-box .mat-expansion-panel {
   box-shadow: none !important;
+  order: 2;
+  width: max-content;
 }
 
-.private-infos .mat-expansion-panel-header {
+.delete-box .mat-expansion-panel:active {
+  background-color: none;
+}
+
+.delete-box .mat-expansion-panel-header {
   font-size: 0.8rem;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 48px;
 }
 
-.private-infos .mat-expansion-panel .mat-expansion-panel-header-title {
-  color: $secondary-text-color;
+.delete-box .mat-focus-indicator {
+  height: 48px !important;
 }
 
-.private-infos .mat-content {
+.delete-box .mat-expansion-panel .mat-expansion-panel-header-title {
+  color: #ff0000b0;
+  margin: 0;
+}
+
+.delete-box .mat-expansion-panel-body {
+  display: block;
+  text-align: center;
+}
+
+.delete-box .mat-content {
   flex: none;
 }
 
-.private-infos .mat-expansion-indicator {
+.delete-box .mat-expansion-indicator {
   display: none;
 }
