--- a/src/materials.scss
+++ b/src/materials.scss
@@ -4,7 +4,7 @@
   box-shadow: none !important;
 }
 
-#sugar-meter .mat-expansion-panel-header {
+#sugar-meter #meter-description .mat-expansion-panel-header {
   border-bottom: 2px solid $secondary-text-color;
   border-radius: 0;
   display: flex;
