--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -25,7 +25,8 @@
   }
 
   .profile-modification {
-    margin-top: $small-border;
+    margin: $small-border auto;
+    text-align: center;
 
     .example-tab-icon {
       width: 40px;
@@ -35,16 +36,42 @@
   }
 }
 
+#sugar-meter-box .mat-expansion-panel-header {
+  border-bottom: 2px solid $secondary-text-color;
+  border-radius: 0;
+  display: flex;
+  justify-content: center;
+  height: min-content;
+}
+
+.button-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .logo-list {
   display: flex;
   align-items: center;
+}
+
+.delete-btn {
+  border: none;
+  text-decoration: underline;
+  background-color: $main-background-color;
+  color: $category-economy-color;
+  cursor: pointer;
+  font-size: 12px;
 }
 
 .logo-option {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 10px; 
+  margin-right: 10px;
+  div {
+    opacity: 0.3;
+  }
 }
 
 .logo-option input[type="radio"] {
@@ -52,28 +79,76 @@
   width: 0;
   height: 0;
 }
-.logo-option::before {
 
+
+.input-container {
+  padding-top: $main-border;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  display: block;
+  font-weight: 700;
+  padding-bottom: $small-border;
+  text-align: center;
+  
+  span {
+      color:$fairy-color;
+  }
+}
+input {
+  display: block;
+  height: auto;
+  width: 100%;
+  padding: $small-border;
+  border-radius: 0.3em;
+  border: 1px solid $secondary-text-color;
+  background-color: white;
+  line-height: 1.3;
+  color: $secondary-text-color;
+  box-shadow: none;
+  transition: border-color .2s;
 }
 
 .logo-option.selected div {
-    background-color: blue !important;
+    opacity: 1;
 }
 
-@media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {
-  .sugar-meter-box {
-
-    h2 {}
-
-    .sugar-meter-children {}
-
-    .meter-reaction {}
-
-    .profile-modification {}
+.button-profile {
+  display: flex;
+  justify-content: center;
+  margin-top: $main-border;
+  button {
+    @include buttons;
+  }
+  div {
+    border: none;
+    text-decoration: underline;
+    background-color: $main-background-color;
+    color: $category-economy-color;
+    cursor: pointer;
+    font-size: 12px;
   }
 }
 
-@media screen and (min-width: 1024px) and (orientation: landscape) {
+
+@media only screen and (min-width: $min-width-desktop) and (orientation: landscape) {
+  .form-border {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: $big-border;
+    .button-profile {
+      grid-column: 1/3;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .button-delete {
+      grid-column: 1/3;
+    }
+  }
   .sugar-meter-box {
 
     h2 {}
