--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: $small-border;
+  
 
   #meter-description {
     display: flex;
@@ -54,40 +55,106 @@
     }
   }
 
-  .example-tab-icon {
-    width: 20px;
-    height: 20px;
-    background-color: $secondary-text-color;
-  }
+    .example-tab-icon {
+      width: 40px;
+      height: 40px;
+      background-color: $secondary-text-color;
+    }
 
   .connection-group {
     padding-bottom: $main-border;
-    border-bottom: $secondary-text-color 2px solid;
   }
-}
 
-@media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {
-  #sugar-meter {
+  .logo-list {
+    display: flex;
+    align-items: center;
+  }
 
-    #meter-description {
-
-      h1 {
-        font-size: 2.8rem;
-      }
-
-      p {}
+  .logo-option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10px;
+    div {
+      opacity: 0.3;
+    }
+  }
+  
+  .logo-option input[type="radio"] {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  
+  .input-container {
+    padding-top: $main-border;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  label {
+    display: block;
+    font-weight: 700;
+    padding-bottom: $small-border;
+    text-align: center;
+    
+    span {
+        color:$fairy-color;
+    }
+  }
+  input {
+    display: block;
+    height: auto;
+    width: 100%;
+    padding: $small-border;
+    border-radius: 0.3em;
+    border: 1px solid $secondary-text-color;
+    background-color: white;
+    line-height: 1.3;
+    color: $secondary-text-color;
+    box-shadow: none;
+    transition: border-color .2s;
+  }
+  
+  .logo-option.selected div {
+      opacity: 1;
+  }
+  
+  .button-profile {
+    display: flex;
+    justify-content: center;
+    margin-top: $main-border;
+    button {
+      @include buttons;
     }
   }
 }
 
-@media screen and (min-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: $min-width-desktop) and (orientation: landscape) {
   #sugar-meter {
+    .form-border {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      column-gap: $big-border;
+      .icone-create {
+        grid-column: 1/3;
+      }
+      .button-profile {
+        grid-column: 1/3;
+      }
+    }
     #meter-description {
       h1 {
         cursor: pointer;
         font-size: 3rem;
         padding-left: 5rem;
         padding-right: 5rem;
+      }
+
+      .meter-description-title {
+        font-size: 2.5rem;
       }
 
       p {
