--- a/src/app/components/sugar-data/sugar-data.component.html
+++ b/src/app/components/sugar-data/sugar-data.component.html
@@ -1,3 +1,3 @@
 <section class="meter-section-svg">
-  <div class="meter-svg" [innerHTML]="sugarDatas | sugarMeter : profile.logo : age"></div>
+  <div [style]="'--grid-size:'+grid" class="meter-svg" [innerHTML]="sugarDatas | sugarMeter : profile.logo : age"></div>
 </section>
