--- a/src/app/components/sugar-data/sugar-data.component.scss
+++ b/src/app/components/sugar-data/sugar-data.component.scss
@@ -4,13 +4,16 @@
   height: 100%;
 
   .meter-svg {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(var(--grid-size), 1fr);
+    justify-items: center;
     padding-top: $big-border;
     padding-bottom: $big-border;
   }
 }
 
-@media only screen and (min-width: $min-width-desktop) and (max-width: 1024px) {}
-
-@media screen and (min-width: 1024px) and (orientation: landscape) {}
+@media only screen and (min-width: $min-width-desktop) and (orientation: landscape) {
+  .meter-svg {
+    padding: $big-border 5*$big-border;
+  }
+}
