--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -36,7 +36,7 @@
   }
 }
 
-#sugar-meter-box .mat-expansion-panel-header {
+.sugar-meter-box .mat-expansion-panel-header {
   border-bottom: 2px solid $secondary-text-color;
   border-radius: 0;
   display: flex;
