--- a/src/app/pages/profiles/profiles.component.scss
+++ b/src/app/pages/profiles/profiles.component.scss
@@ -36,9 +36,7 @@
   }
 }
 
-#sugar-meter-box .mat-expansion-panel-header {
-  border-bottom: 2px solid $secondary-text-color;
-  border-radius: 0;
+.sugar-meter-box .mat-expansion-panel-header {
   display: flex;
   justify-content: center;
   height: min-content;
@@ -69,6 +67,7 @@
   flex-direction: column;
   align-items: center;
   margin-right: 10px;
+
   div {
     opacity: 0.3;
   }
@@ -93,11 +92,12 @@ label {
   font-weight: 700;
   padding-bottom: $small-border;
   text-align: center;
-  
+
   span {
-      color:$fairy-color;
+    color: $fairy-color;
   }
 }
+
 input {
   display: block;
   height: auto;
@@ -113,16 +113,18 @@ input {
 }
 
 .logo-option.selected div {
-    opacity: 1;
+  opacity: 1;
 }
 
 .button-profile {
   display: flex;
   justify-content: center;
   margin-top: $main-border;
+
   button {
     @include buttons;
   }
+
   div {
     border: none;
     text-decoration: underline;
@@ -139,16 +141,19 @@ input {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: $big-border;
+
     .button-profile {
       grid-column: 1/3;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
+
     .button-delete {
       grid-column: 1/3;
     }
   }
+
   .sugar-meter-box {
 
     h2 {}
