--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   padding: $small-border;
-  
+
 
   #meter-description {
     display: flex;
@@ -44,22 +44,13 @@
       padding-top: $main-border;
       padding-bottom: $main-border;
     }
-
-    .profileCreationForm {
-      color: $secondary-text-color;
-
-      label {
-
-        input {}
-      }
-    }
   }
 
-    .example-tab-icon {
-      width: 40px;
-      height: 40px;
-      background-color: $secondary-text-color;
-    }
+  .example-tab-icon {
+    width: 40px;
+    height: 40px;
+    background-color: $secondary-text-color;
+  }
 
   .connection-group {
     padding-bottom: $main-border;
@@ -75,35 +66,38 @@
     flex-direction: column;
     align-items: center;
     margin-right: 10px;
+
     div {
       opacity: 0.3;
     }
   }
-  
+
   .logo-option input[type="radio"] {
     opacity: 0;
     width: 0;
     height: 0;
   }
-  
-  
+
+
   .input-container {
     padding-top: $main-border;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  
+
   label {
     display: block;
     font-weight: 700;
     padding-bottom: $small-border;
     text-align: center;
-    
+    color: $secondary-text-color;
+
     span {
-        color:$fairy-color;
+      color: $fairy-color;
     }
   }
+
   input {
     display: block;
     height: auto;
@@ -116,16 +110,18 @@
     color: $secondary-text-color;
     box-shadow: none;
     transition: border-color .2s;
+    font-size: 15px;
   }
-  
+
   .logo-option.selected div {
-      opacity: 1;
+    opacity: 1;
   }
-  
+
   .button-profile {
     display: flex;
     justify-content: center;
     margin-top: $main-border;
+
     button {
       @include buttons;
     }
@@ -138,13 +134,16 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       column-gap: $big-border;
+
       .icone-create {
         grid-column: 1/3;
       }
+
       .button-profile {
         grid-column: 1/3;
       }
     }
+
     #meter-description {
       h1 {
         cursor: pointer;
